[project]
name = "seijaku"
version = "0.1.0"
description = "A C2 which can be easily countered and compromised. (THUDART commission)"
authors = [
    {name = "Mix", email = "32300164+mnixry@users.noreply.github.com"},
]
dependencies = ["fastapi[standard]>=0.115.5", "rich>=13.9.4"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
